--- a/public/admin_assets/css/bootstrap.css
+++ b/public/admin_assets/css/bootstrap.css
@@ -5,8 +5,8 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --blue: #007bfa;
-  --indigo: #6610f3;
+  --blue: #007bff;
+  --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
   --red: #dc3545;
