--- a/public/admin_assets/css/form-2.css
+++ b/public/admin_assets/css/form-2.css
@@ -16,7 +16,7 @@ body {
   overflow: auto;
   margin: 0;
   padding: 0;
-  background-color: #fff; }
+  background-color: #ffff; }
 
 .form-form {
   width: 50%;
